# tgno-backend

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.dev.sh  entrypoint.prod.sh  manage.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yaml  ci.yaml
aktuelt/: api.py  apps.py  article_payload.py  constants.py  handlers.py  image_formats.py  models.py  serializers.py  tests.py  urls.py  views_preview.py  wagtail_hooks.py
aktuelt/migrations/: 0001_initial.py  0002_newspage.py  0003_newspagegalleryimage.py  0004_author.py  0005_newspage_authors.py  0006_newspagetag_newspage_tags.py  0007_newstagindexpage.py  0008_contributor_newspagecontributor_and_more.py  0009_remove_newspage_date_newspage_custom_published_at_and_more.py  0010_delete_newspagegalleryimage.py  0011_remove_newspage_custom_updated_at.py  0012_alter_contributor_image_alter_newspage_main_image.py
home/: api.py  models.py  serializers.py
home/migrations/: 0002_create_homepage.py  0003_homepage_body.py  0004_customimage_customrendition.py  0004_homepage_content.py  0005_alter_customimage_options_alter_customimage_id_and_more.py
konkurranse/: api.py  apps.py  models.py  serializers.py
konkurranse/migrations/: 0001_initial.py  0002_prize.py
praktisk/: api.py  apps.py  models.py  serializers.py  tests.py
program/: admin.py  api.py  models.py  serializers.py  views.py
search/: views.py
tgno/: api.py  context_processor.py  urls.py  wsgi.py
(+25 files in other folders)
